--- a/plugin.xml
+++ b/plugin.xml
@@ -100,6 +100,25 @@
             </dict>
           </array>
         </config-file>
+            
+        <config-file target="*-Info.plist" parent="LSApplicationQueriesSchemes">
+                <array>
+                    <string>fbapi</string>
+                    <string>fbapi20130214</string>
+                    <string>fbapi20130410</string>
+                    <string>fbapi20130702</string>
+                    <string>fbapi20131010</string>
+                    <string>fbapi20131219</string>    
+                    <string>fbapi20140410</string>
+                    <string>fbapi20140116</string>
+                    <string>fbapi20150313</string>
+                    <string>fbapi20150629</string>
+                    <string>fbapi20160328</string> 
+                    <string>fbauth</string>
+                    <string>fbauth2</string>
+                    <string>fb-messenger-api20140430</string>
+                </array>
+        </config-file>
 
         <!-- Facebook framework -->
         <framework src="platforms/ios/Bolts.framework" custom="true" />
